--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <p class="descText">We are a small team of designers and developers, who help brands with big ideas.</p>
             <div class="teamList">
                 <div class="column">
-                    <div class="photo"></div>
+                    <div class="photo anne"></div>
                     <h3> ANNE HATHAWAY</h3>
                     <div class="job-title">CEO / Marketing Guru</div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum fugiat deserunt expedita nisi.
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="photo"></div>
+                    <div class="photo kate"></div>
                     <h3> KATE UPTON</h3>
                     <div class="job-title">Creative Director</div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum fugiat deserunt expedita nisi.
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="photo"></div>
+                    <div class="photo olivia"></div>
                     <h3> OLIVIA WILDE</h3>
                     <div class="job-title">Lead Designer</div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum fugiat deserunt expedita nisi.
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="photo"></div>
+                    <div class="photo ashley"></div>
                     <h3> ASHLEY GREENE</h3>
                     <div class="job-title">SEO / Developer</div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum fugiat deserunt expedita nisi.
@@ -270,7 +270,7 @@
             <div class="comment__list">
                 <div class="column">
                     <div class="block">
-                        <div class="photo"></div>
+                        <div class="photo chanel"></div>
                         <div class="comment--text">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facere reiciendis
                                 officiis in, ea quam eligendi"</p>
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="block">
-                        <div class="photo"></div>
+                        <div class="photo anne"></div>
                         <div class="comment--text">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facere reiciendis
                                 officiis in, ea quam eligendi"</p>
@@ -290,7 +290,7 @@
                 </div>
                 <div class="column">
                     <div class="block">
-                        <div class="photo"></div>
+                        <div class="photo adriana"></div>
                         <div class="comment--text">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facere reiciendis
                                 officiis in, ea quam eligendi"</p>
@@ -299,7 +299,7 @@
                         </div>
                     </div>
                     <div class="block">
-                        <div class="photo"></div>
+                        <div class="photo emma"></div>
                         <div class="comment--text">
                             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur facere reiciendis
                                 officiis in, ea quam eligendi"</p>
